--- a/Pages/DriverBookings.cshtml
+++ b/Pages/DriverBookings.cshtml
@@ -83,14 +83,21 @@
                                     <p>Vehicle: @item.vehicleMake | Color: @item.vehicleColor | RegNo: @item.vehicleRegNo</p>
 
                                     <div class="row">
-                                        <div class="col-sm-6">
-                                            <img src="/mugshots/@item.picDriversLicense" alt="DriversLicensePic" class="img-thumbnail" style="width:40%">
+                                        <div class="col-sm-4">
+                                            <label>D/License</label>
+                                            <img src="/mugshots/@item.picDriversLicense" alt="DriversLicensePic" class="img-thumbnail" style="width:100%">
                                         </div>
-                                        <div class="col-sm-6">
-                                            <img src="/mugshots/@item.picZinaraReg" alt="ZinaraRegPic" class="img-thumbnail" style="width:40%">
+                                        <div class="col-sm-4">
+                                        <label>ZINARA</label>
+                                            <img src="/mugshots/@item.picZinaraReg" alt="ZinaraRegPic" class="img-thumbnail" style="width:100%">
                                         </div>
+                                    <div class="col-sm-4">
+                                        <label>Vehicle</label>
+                                        <img src="/mugshots/@item.picCar" alt="carPicture" class="img-thumbnail" style="width:100%">
                                     </div>
-
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-6">
                                     <p>
                                         Phone:@if (item.passengerStatus == "Accepted" && item.driverStatus == "Accepted")
                                         {
@@ -102,7 +109,8 @@
                                         }
 
                                     </p>
-
+                                    </div>
+                                    <div class="col-sm-6">
                                     <p>
                                         Email:@if (item.passengerStatus == "Accepted" && item.driverStatus == "Accepted")
                                         {
@@ -115,10 +123,8 @@
                                             <b>Waiting driver confirmation</b>
                                         }
                                     </p>
-
-
-
-
+                                    </div>
+                                    </div>
                                 </div>
                                 <ul class="social">
 
