--- a/Pages/RideOffers.cshtml
+++ b/Pages/RideOffers.cshtml
@@ -70,12 +70,19 @@
                                     <p>Vehicle: @item.vehicleMake | Color: @item.vehicleColor | RegNo: @item.vehicleRegNo</p>
 
                                     <div class="row">
-                                        <div class="col-sm-6">
-                                            <img src="/mugshots/@item.picDriversLicense" alt="DriversLicensePic" class="img-thumbnail" style="width:40%">
+                                        <div class="col-sm-4">
+                                        <label>D/License</label>
+                                            <img src="/mugshots/@item.picDriversLicense" alt="DriversLicensePic" class="img-thumbnail" style="width:100%">
                                         </div>
-                                        <div class="col-sm-6">
-                                            <img src="/mugshots/@item.picZinaraReg" alt="ZinaraRegPic" class="img-thumbnail" style="width:40%">
+                                        <div class="col-sm-4">
+                                        <label>Zinara</label>
+                                            <img src="/mugshots/@item.picZinaraReg" alt="ZinaraRegPic" class="img-thumbnail" style="width:100%">
                                         </div>
+
+                                    <div class="col-sm-4">
+                                        <label>Vehicle</label>
+                                        <img src="/mugshots/@item.picCar" alt="carPicture" class="img-thumbnail" style="width:100%">
+                                    </div>
                                     </div>
 
 
