Rating Comments both interfaces

--- a/Pages/PassengerBookings.cshtml
+++ b/Pages/PassengerBookings.cshtml
@@ -158,21 +158,21 @@
                             <div class="col">
                                 <div class="custom-control custom-radio">
                                     <input class="custom-control-input" type="radio" id="customRadio1" name="customRadio" value="1" checked>
-                                    <label for="customRadio1" class="custom-control-label">1 Point</label>
+                                    <label for="customRadio1" class="custom-control-label">1 Pts</label>
 
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="custom-control custom-radio">
                                     <input class="custom-control-input" type="radio" id="customRadio2" name="customRadio" value="2">
-                                    <label for="customRadio2" class="custom-control-label">2 Points</label>
+                                    <label for="customRadio2" class="custom-control-label">2 Pts</label>
 
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="custom-control custom-radio">
                                     <input class="custom-control-input" type="radio" id="customRadio3" name="customRadio" value="3">
-                                    <label for="customRadio3" class="custom-control-label">3 Points</label>
+                                    <label for="customRadio3" class="custom-control-label">3 Pts</label>
 
                                 </div>
                             </div>
@@ -180,15 +180,24 @@
                             <div class="col">
                                 <div class="custom-control custom-radio">
                                     <input class="custom-control-input" type="radio" id="customRadio4" name="customRadio" value="4">
-                                    <label for="customRadio4" class="custom-control-label">4 Points</label>
+                                    <label for="customRadio4" class="custom-control-label">4 Pts</label>
 
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="custom-control custom-radio">
                                     <input class="custom-control-input" type="radio" id="customRadio5" name="customRadio" value="5">
-                                    <label for="customRadio5" class="custom-control-label">5 Points</label>
+                                    <label for="customRadio5" class="custom-control-label">5 Pts</label>
 
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label for="comments">Comments</label>
+                                    <input type="text" id="comments" name="comments" class="form-control">
                                 </div>
                             </div>
                         </div>
