--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -163,7 +163,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="/SubmittedOffers" class="nav-link">
 
                                 <i class="nav-icon fas fa-arrow-right-long"></i>
                                 <p>
