--- a/Pages/Signup.cshtml
+++ b/Pages/Signup.cshtml
@@ -30,26 +30,26 @@
     </div>
     <div class="card-body">
       <p class="login-box-msg">Register a new account</p>
-                @if (Model.errorMessage.Length > 0)
+                @if (@Model.errorMessage.Length > 0)
                 {
-        <div class="d-flex justify-content-between w-100 flex-wrap">
-            <div class="mb-3 mb-lg-0">
-                <div class="alert alert-danger" role="alert">
-                    <strong>@Model.errorMessage</strong>
-                </div>
-            </div>
-        </div>
+
+
+                    <div class="alert alert-danger" role="alert">
+                        <strong>@Model.errorMessage</strong>
+                    </div>
+
+
                 }
 
-                @if (Model.successMessage.Length > 0)
+                @if (@Model.successMessage.Length > 0)
                 {
-        <div class="d-flex justify-content-between w-100 flex-wrap">
-            <div class="mb-3 mb-lg-0">
-                <div class="alert alert-success" role="alert">
-                    <strong>@Model.successMessage</strong>
-                </div>
-            </div>
-        </div>
+
+
+                    <div class="alert alert-success" role="alert">
+                        <strong>@Model.successMessage</strong>
+                    </div>
+
+
                 }
       <form method="POST" enctype="multipart/form-data" >
 
