--- a/Pages/VerifySignUp.cshtml
+++ b/Pages/VerifySignUp.cshtml
@@ -98,8 +98,8 @@
                                     <td>@user.fullName</td>
                                     <td>@user.idNo</td>
                                                     <td><img src="/mugshots/@user.idScan" alt="userIDPic" class="img-thumbnail" style="width:40%" ></td>
-                                                    <td><img src="/mugshots/@user.profilePic" alt="userIDScan" class="img-thumbnail" style="width:40%" ></td>
-                                                    <td>@user.aiVerification</td>
+                                                    <td><img src="/mugshots/@user.profilePic" alt="userIDScan" class="img-thumbnail" style="width:100%" ></td>
+                                                    <td>@{float verification = float.Parse(@user.aiVerification) *100;} @verification %</td>
                                                     <td>@user.accountStatus</td>
                                     <td>
 
