--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -56,7 +56,10 @@
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
                 <!-- Navbar Search -->
-                
+                <li class="nav-item">
+                    <a role="button" class="btn btn-primary btn-block" href="https://wa.me/263779449257">Contact Support</a>
+
+                </li>
 
                      
                         
